【同步】BOOT 和 CLOUD 的功能（WMS）【兼容各种 JDK8】